dfir_rs/tests/compile-fail-stable/surface_syntax_paren_noarrow_op.rs
../compile-fail/surface_syntax_paren_noarrow_op.rs